--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,4 +1,5 @@
-@require 'cozy-ui/build'
+// @require 'cozy-ui/build'
+@require '~cozy-ui/dist/cozy-ui.min.css'
 @require './nav.css'
 @require './lessons'
 @require './player'
