--- a/src/styles/lessons.styl
+++ b/src/styles/lessons.styl
@@ -15,7 +15,7 @@
 .class-course
   display:flex
   flex-wrap: wrap
-  
+
 .class-course-title
   background-color: frenchPass
 
@@ -23,12 +23,16 @@
   width: 100%
 
 .lesson
-  width: 10rem
+  width: 14rem
+  height: 17rem
   margin: 1rem
-  padding: 0.5rem
+  border: 1px solid var(--silver)
   border-radius: 4px
-  background-color: frenchPass
+  background-color: var(--paleGrey)
+  background-color: var(--frenchPass)
   box-shadow: rgba(0,0,0,0.1) 0 1px 2px
+  display: flex
+  flex-direction: column
 
 .lesson:hover
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2)
