--- a/src/styles/player.styl
+++ b/src/styles/player.styl
@@ -24,24 +24,28 @@
   position         : relative
 
 #score
-  position : absolute
-  right    : 1rem
+  position         : absolute
+  right            : 1rem
 
 .question
-  display: flex
-  flex-direction: column
-  align-items : stretch
+  display        : flex
+  flex-direction : column
+  align-items    : stretch
+  padding-top    : 0.75rem
+
+.question input
+  max-width      : none
+  margin-top     : 1.75rem
 
 .player-card
   border-radius  : 6px
   border         : 1px solid #d6d8da
-  padding        : 1rem
 
 #stopLessonBtn
   align-self : flex-start
 
-#reward
-  background-color:  blue
+// #reward
+//   background-color:  blue
 
 #reward img
   max-width    : 25rem
