--- a/src/styles/player.styl
+++ b/src/styles/player.styl
@@ -36,6 +36,7 @@
 .question input
   max-width      : none
   margin-top     : 1.75rem
+  font-size      : xx-large
 
 .player-card
   border-radius  : 6px
@@ -44,8 +45,12 @@
 #stopLessonBtn
   align-self : flex-start
 
-// #reward
-//   background-color:  blue
+#reward
+  position      : absolute
+  width         : 100%
+  border-radius : 6px
+  bottom        : 2rem
+  transition    : all 1s ease-in
 
 #reward img
   max-width    : 25rem
